# cascade_labeling

./: .gitignore  Project.md  README.md  environment.yml  pyproject.toml  requirements.txt
configs/datasets/: eurlex-4k.yaml  wiki10-31k.yaml
configs/experiments/: bi_finetuned_cross_100_10.yaml  bi_finetuned_cross_finetuned_10_10.yaml  biencoder_only.yaml  biencoder_only_finetuned.yaml  bm25_bi_1000_100.yaml  bm25_bi_1000_100_rag.yaml  bm25_cross_100_10_mixedrag.yaml  bm25_only.yaml  bm25_only_rag.yaml  crossencoder_only.yaml  wiki10_bi_finetuned_cross_finetuned_15_10.yaml  wiki10_biencoder_only_finetuned.yaml  wiki10_bm25_bi_1000_100_finetuned.yaml  wiki10_bm25_bi_cross_1000_100_10.yaml  wiki10_bm25_bi_cross_1000_15_10_finetuned.yaml  wiki10_bm25_bi_cross_finetuned_1000_15_10.yaml
data/processed/eurlex-4k/: rag_labels.parquet
docs/: 00_overview.md  01_setup.md  02_datasets.md  03_stages_and_models.md  04_running_pipelines.md  05_results.md  06_rag_labels.md
notebooks/: 01_dataset_eda.ipynb  02_results_analysis.ipynb  03_accuracy_vs_compute.ipynb
results/runs/bi_finetuned_cross_100_10/: metrics.json  per_stage.parquet  predictions.parquet  resources.json
results/runs/bi_finetuned_cross_finetuned_100_10/: config.yaml  metrics.json  per_stage.parquet  predictions.parquet  resources.json
results/runs/biencoder_only/: metrics.json  resources.json  (+2 more)
results/summary/: all_runs.parquet
scripts/: 00_download_data.py  01_prepare_data.py  03_run_experiment.py  04_aggregate_results.py  05_generate_rag_labels.py  06_finetune_bi_encoder.py  07_finetune_cross_encoder.py
(+161 files in other folders)
